# AI_Backoffice_MVP

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-compose.yml.save  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
app/: main.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_email_metadata_to_invoices.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: analytics.py  audit.py  auth.py  exports.py  invoices.py  payments.py  tenants.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  approval.py  audit_event.py  ingestion_run.py  invoice.py  invoice_exception.py  payment.py  tenant.py  user.py
backend/app/schemas/: audit.py  auth.py  invoice.py  payment.py  user.py
backend/app/services/: audit.py  validation.py
backend/app/workers/: email_poller.py  scheduler.py
backend/scripts/: entrypoint.sh  run_migrations.py  seed.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_email_poller.py  test_invoices.py  test_rbac.py  test_tenant_isolation.py
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: bootstrap.sh  reset_db.sh  smoke_test.sh
test_data/: sample_invoice.txt
tests/: conftest.py  test_audit.py  test_exports.py  test_health.py  (+1 more)
(+48 files in other folders)
